--- a/styles/style.css
+++ b/styles/style.css
@@ -49,8 +49,14 @@ nav {
     display: none; 
 }
 
+.displayed-work {
+    border: 6px solid #FFD980;
+}
+
+#queue h1,
 #queue h5 {
-    margin-left: 2rem;
+    margin-right: 2rem;
+    text-align: right;
 }
 
 .queue-control {
@@ -85,6 +91,8 @@ nav {
     padding: 0.25rem 1rem;
     color: #F2F1F0;
     font-family: 'Montserrat', Verdana, sans-serif;
+    text-align: center;
+    transition: 0.5s background-color;
 }
 
 
@@ -176,14 +184,6 @@ nav {
     margin-top: -12rem;
 }
 
-h1 {
-    color: #F2F1F0;
-}
-
-h2 {
-    color: #CFCECD;
-}
-
 h1,
 h3,
 h4,
@@ -194,13 +194,16 @@ h5 {
 }
 
 h1 {
+    color: #F2F1F0;
     font-size: 4.3333rem;
 }
 
 h2 {
+    color: #CFCECD;
     font-family: 'Lato', "Times New Roman", Times, serif;
     font-style: italic;
-    font-weight: 400;
+    font-weight: 900;
+    letter-spacing: 0.1rem;
     font-size: 1.8rem;
 }
 
@@ -221,15 +224,16 @@ header span {
 }
 
 
-/*HELLO HEADER STYLES ||||||||||||*/
+/*INTRO SECTION HEADER STYLES ||||||||||||*/
 
-#hello header {
+#hello header,
+#custom-queue header {
     padding: 0;
     margin-top: 8.9rem;
     margin-bottom: 2rem;
 }
 
-#hello #graphic {
+.hello-graphic {
     position: absolute;
     top: 12rem;
     left: 7.5rem;
@@ -237,31 +241,38 @@ header span {
     opacity: 0.9;
 }
 
-#hello header > span {
+#hello header > span, 
+#custom-queue header > span {
     display: block;
     text-align: center;
 }
 
-#hello .line-one, #hello .line-two {
+#hello .line-one, #hello .line-two,
+#custom-queue .line-one, #custom-queue .line-two {
     font-family: 'Montserrat', Verdana, sans-serif;
+    font-weight: 400;
     text-transform: uppercase;
 }
 
-#hello .line-one {
+#hello .line-one,
+#custom-queue .line-one {
     font-size: 3.7rem;
     color: #CFCECD;
 }
 
-#hello .line-two {
+#hello .line-two,
+#custom-queue .line-two {
     font-size: 4.8rem;
     color: #8086ff;
 }
 
-#hello .line-three {
+#hello .line-three,
+#custom-queue .line-three {
     font-family: 'Lato', "Times New Roman", Times, serif;
     font-style: italic;
-    font-weight: 600;
+    font-weight: 900;
     font-size: 2.7rem;
+    letter-spacing: 0.1rem;
     color: #CFCECD;
 }
 
@@ -295,7 +306,7 @@ a {
 
 .span-icon:hover,
 .span-icon:active {
-    letter-spacing: -0.4rem;
+    letter-spacing: -0.3rem;
 }
 
 .icon-tray {
@@ -479,6 +490,11 @@ a {
 
 .all-tag::after {
     content: 'ALL';
+}
+
+.custom-tag {
+    background-color: #8A8C8C;
+    text-transform: uppercase;
 }
 
 .work-desc-container {
