Variable info style change
>Changed variable info in the custom queue section to be better
highlighted.

--- a/styles/style.css
+++ b/styles/style.css
@@ -294,6 +294,11 @@ a {
     color: #FFD980;
 }
 
+.variable-info {
+    color: #8086ff;
+    font-weight: 900;
+}
+
 /*ICON STYLES ||||||||||||*/
 
 .span-icon {
