3 sections & notifying feature added
> Added 3d-print, fliers, and show-booth sections.
> Added some files missing from Hakas-gallery page.
> Corrected some incorrect function calls in ds-brand.
> Added a block class for separating blocks of content in sections.
> Added a feature to email me when custom queues are loaded.

--- a/styles/style.css
+++ b/styles/style.css
@@ -550,6 +550,10 @@ a {
     margin-top: 2rem;
 }
 
+.block {
+    clear: both;
+}
+
 pre {
     padding: 0 6rem;
 }
@@ -578,6 +582,10 @@ video {
     float: right;
     margin: 2rem;
     margin-right: 6rem;
+}
+
+.block .photo {
+    margin-top: 0;
 }
 
 .caption,
