Committing old changes
> I've resumed working on my portfolio, but in a different location.
I'm just going to commit these last few changes, then move my new files
over to the github directory.

--- a/styles/style.css
+++ b/styles/style.css
@@ -208,14 +208,6 @@ h2 {
     font-size: 1.8rem;
 }
 
-h3 {
-    font-size: 3rem;
-}
-
-h4 {
-    font-size: 2rem;
-}
-
 h5 {
     font-size: 1rem;
 }
@@ -286,6 +278,16 @@ p {
     text-align: justify;
     padding: 0 6rem;
     line-height: 1.618;
+}
+
+h3 {
+    font-size: 3rem;
+    padding: 0 6rem;
+}
+
+h4 {
+    font-size: 2rem;
+    padding: 0 6rem;
 }
 
 pre {
