--- a/styles/style.css
+++ b/styles/style.css
@@ -28,6 +28,7 @@ section > * + * {
 
 nav {
     font-family: 'Montserrat', Verdana, sans-serif;
+    font-weight: 400;
     text-transform: uppercase;
     font-size: 2rem;
 }
@@ -87,10 +88,12 @@ nav {
 }
 
 .queue-tag {
+    width: 20rem;
     margin-top: 1rem;
     padding: 0.25rem 1rem;
     color: #F2F1F0;
     font-family: 'Montserrat', Verdana, sans-serif;
+    font-weight: 400;
     text-align: center;
     transition: 0.5s background-color;
 }
@@ -159,6 +162,7 @@ nav {
     transform: perspective(12rem);
     transform-origin: center bottom;
     transition: transform 0.5s;
+    cursor: pointer;
 }
 
 #continue-icon img {
@@ -221,7 +225,7 @@ h5 {
     margin-bottom: 2rem;
 }
 
-.hello-graphic {
+#hello-graphic {
     position: absolute;
     top: 12rem;
     left: 7.5rem;
@@ -240,7 +244,7 @@ h5 {
 #custom-queue .line-one,
 #custom-queue .line-two {
     font-family: 'Montserrat', Verdana, sans-serif;
-    font-weight: 400;
+    font-weight: 700;
     text-transform: uppercase;
 }
 
@@ -504,7 +508,7 @@ a {
 }
 
 .all-tag::after {
-    content: 'ALL';
+    content: 'ALL WORKS';
 }
 
 .custom-tag {
@@ -607,6 +611,16 @@ video {
 
 .photo a {
     display: inline-block;
+}
+
+.link-label::after {
+    content: 'LINK';
+    font-size: 4rem;
+    font-family: 'Montserrat', Verdana, sans-serif;
+    position: relative;
+    top: -5.1rem;
+    background-color: rgba(0,0,0,0.5);
+    padding: 0 1rem;
 }
 
 .photogrid {
