--- a/styles/style.css
+++ b/styles/style.css
@@ -489,7 +489,7 @@ a {
     transform: perspective(12rem) rotateX(4deg);
 }
 
-.tag {
+.label {
     height: 1.6rem;
     float: right;
     clear: right;
@@ -497,7 +497,8 @@ a {
     margin-top: 0.5rem;
     color: white;
     font-family: 'Montserrat', Verdana, sans-serif;
-    font-size: 1.25rem
+    font-size: 1.25rem;
+    box-shadow: -1px -1px 3px black, -1px 1px 3px black;
 }
 
 .illustrator-label {
