--- a/styles/style.css
+++ b/styles/style.css
@@ -498,7 +498,7 @@ a {
     color: white;
     font-family: 'Montserrat', Verdana, sans-serif;
     font-size: 1.25rem;
-    box-shadow: -1px -1px 3px black, -1px 1px 3px black;
+    box-shadow: -1px -1px 3px rgba(0,0,0,0.25), -1px 1px 3px rgba(0,0,0,0.25);
 }
 
 .illustrator-label {
