--- a/styles/style.css
+++ b/styles/style.css
@@ -54,7 +54,7 @@ nav > * + * {
 }
 
 .displayed-work {
-    border: 6px solid #FFD980;
+    height: 9rem !important;
 }
 
 #queue h1,
@@ -63,29 +63,25 @@ nav > * + * {
     text-align: right;
 }
 
-.queue-control {
-    padding: 1rem 2rem;
-    height: 4rem;
+#queue .works-tray .span-icon {
+    display: block;
+    text-align: center;
+    width: 100%;
+    padding: 1.1rem 0;
+    background: rgba(85, 87, 89, 0.75);
 }
 
-.prev-link {
-    float: left;
-}
-
-.prev-link::after {
+.prev-work::after {
     content: 'PREV';
 }
 
-.next-link {
-    float: right;
-}
-
-.next-link::after {
+.next-work::after {
     content: 'NEXT';
 }
 
 nav header {
     width: 20rem;
+    margin-bottom: 1rem;
 }
 
 .queue-label {
@@ -484,7 +480,8 @@ main .icon-tray > * + * {
 }
 
 #nav-icons .icon-tray {
-    margin: 1rem 1.9rem;
+    margin: 0 1.9rem;
+    margin: 0 1.9rem;
     flex-direction: row;
     flex-wrap: wrap;
     align-items: flex-start;
@@ -521,7 +518,7 @@ main .works-tray {
 #queue .works-tray {
     width: 20rem;
     padding: 0 1rem;
-    height: 29rem;
+    height: 20rem;
 }
 
 .work {
@@ -540,35 +537,26 @@ main .work {
     transition: transform 0.5s;
 }
 
-#queue .work-card {
+#queue .queue-card {
     width: 18rem;
-    height: 9rem;
-    background-color: rgba(38, 39, 41, 0.9);
-    transform: perspective(12rem);
-    transform-origin: center bottom;
-    transition: transform 0.5s;
+    height: 4.5rem;
     display: flex;
     align-items: center;
     
     transition: height 0.5s;
 }
 
-#queue .work-card + .work-card {
+#queue .queue-card + .queue-card {
     margin-top: 1rem;
-}
-
-#queue .work-card.collapsed  {
-    height: 4.5rem;
 }
 
 #queue .work {
     width: 9rem;
     height: inherit;
-    transition: opacity 0.5s;
-}
-
-#queue .work-card.collapsed .work  {
-    opacity: 0;
+    
+    transform: perspective(12rem);
+    transform-origin: center right;
+    transition: transform 0.5s;
 }
 
 main .work:hover,
@@ -576,9 +564,14 @@ main .work:active {
     transform: perspective(12rem) rotateX(2deg);
 }
 
-#queue .work-card:hover,
-#queue .work-card:active {
-    transform: perspective(12rem) rotateX(4deg);
+#queue .queue-card:hover .span-icon,
+#queue .queue-card:active .span-icon {
+    letter-spacing: -0.3rem;
+}
+
+#queue .work:hover,
+#queue .work:active {
+    transform: perspective(12rem) rotateY(-6deg);
 }
 
 /*|||||||||||||||||||||||||*/
@@ -702,8 +695,11 @@ main .work:active {
 
 #queue .work-desc-container {
     width: 9rem;
-    padding: 1rem;
+    height: inherit;
+    padding: 0 1rem;
     display: flex;
+    align-items: center;
+    background-color: rgba(85, 87, 89, 0.9);
     color: #262729;
 }
 
