--- a/styles/style.css
+++ b/styles/style.css
@@ -205,7 +205,7 @@ h2 {
 }
 
 h5 {
-    font-size: 1rem;
+    font-size: 1.2rem;
 }
 
 /*INTRO SECTION HEADER STYLES ||||||||||||*/
@@ -843,10 +843,12 @@ video {
 .link-label::after {
     content: 'LINK';
     font-size: 3rem;
-    position: relative;
-    top: -4.5rem;
-    left: 1rem;
+    margin-left: 1rem;
     text-shadow: 1px -1px 5px black, -1px 1px 5px black;
+}
+
+.link-label img {
+    margin-bottom: -4.5rem;
 }
 
 .photogrid {
