Updated copy & replaced missing content
> Added back some graphics that disappeared from .nccs-brand. Hopefully that was a fluke and I don't have a bunch of works with missing images.
> Corrected a style that caused an animation glitch.
> Added the first of many new queues. I won't explicitly call this out in future commits, I just wanted to state that I've started.
> Copied all works into works_list. I don't want visitors seeing new piece to depend on whether they visit with a key; I will revise my concealment methods soon to block IP addresses specifically.

--- a/styles/style.css
+++ b/styles/style.css
@@ -170,7 +170,7 @@ nav header {
 /*SECTION HEADER STYLES ||||||||||||*/
 
 main header {
-    width: 76rem;
+    width: 80rem;
     padding: 0 6rem;
 }
 
@@ -724,7 +724,7 @@ main .work:active {
 /*WORK DESC STYLES ||||||||||||*/
 /*|||||||||||||||||||||||||||||*/
 
-#works .work-desc-container, #custom-queue .work-desc-container {
+section .work-desc-container {
     width: 100%;
     padding: 0.5rem;
     background-color: rgba(0, 0, 0, 0.5);
@@ -743,7 +743,7 @@ main .work:active {
     color: #262729;
 }
 
-#works .work:hover .work-desc-container {
+section .work:hover .work-desc-container {
     opacity: 1;
 }
 
